--- a/date/2025-10/page-2.htm
+++ b/date/2025-10/page-2.htm
@@ -3,18 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://v2ray-node.github.io" />
-    <title>2025-10归档 - V2ray Node免费节点官网</title>
+    <title>2025-10归档 - 第3页 - V2ray Node免费节点官网</title>
         <meta name="keywords" content="2025-10归档V2ray Node免费节点官网" />
-        <meta name="description" content="2025-10归档，当前是第1页" />
+        <meta name="description" content="2025-10归档，当前是第3页" />
         <link rel="icon" href="/assets/website/img/v2ray_node/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="V2ray Node免费节点官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://v2ray-node.github.io" />
     <meta property="og:site_name" content="V2ray Node免费节点官网" />
-    <meta property="og:title" content="2025-10归档 - V2ray Node免费节点官网" />
+    <meta property="og:title" content="2025-10归档 - 第3页 - V2ray Node免费节点官网" />
     <meta property="og:image" content="/assets/website/img/v2ray_node/favicon.ico" />
-        <meta property="og:description" content="2025-10归档，当前是第1页" />
+        <meta property="og:description" content="2025-10归档，当前是第3页" />
         
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-10归档 - V2ray Node免费节点官网">
+    <meta name="apple-mobile-web-app-title" content="2025-10归档 - 第3页 - V2ray Node免费节点官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -110,6 +110,84 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-10-11">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-11-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「10月11日」最高速度21.7M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-11-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月11日」最高速度21.7M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、欧洲、香港、韩国、日本、美国、新加坡等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-10-10">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-10-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-10-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、加拿大、日本、新加坡、欧洲、韩国、香港等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-10-09">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-9-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「10月9日」最高速度20.3M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-9-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月9日」最高速度20.3M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、香港、新加坡、美国、日本、韩国、欧洲等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-8-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-8-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、韩国、日本、欧洲、新加坡、美国、香港等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-7-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「10月7日」最高速度20.9M/S，2025年Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-7-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月7日」最高速度20.9M/S，2025年Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、日本、美国、韩国、香港、欧洲、加拿大等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「10月6日」最高速度18M/S，2025年V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月6日」最高速度18M/S，2025年V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、韩国、日本、欧洲、美国、香港、新加坡等地区,最高速度可达18 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-10-05">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-10-5-free-ssr-node.htm" class="xcblog-blog-url">
@@ -162,21 +240,8 @@
                                     <p>这一次的节点更新覆盖了新加坡、韩国、美国、加拿大、欧洲、香港、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-10-01">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「10月1日」最高速度18.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月1日」最高速度18.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、新加坡、韩国、欧洲、日本、加拿大、美国等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li><a href="/date/2025-10/">&laquo;</a></li> <li><a href="/date/2025-10/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/date/2025-10/">&laquo;</a></li> <li><a href="/date/2025-10/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-10/page-3.htm">3</a></li> <li><a href="/date/2025-10/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -185,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-node-subscribe.htm" title="「9月21日」最高速度22.8M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接">「9月21日」最高速度22.8M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share.htm" title="「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接">「9月22日」最高速度19.1M/S，2025年Shadowrocket节点/V2ray节点/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-v2ray-subscribe.htm" title="「9月23日」最高速度20M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接">「9月23日」最高速度20M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-node-share-links.htm" title="「9月28日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接">「9月28日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-clash-node.htm" title="「10月15日」最高速度18.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月15日」最高速度18.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-ssr-node.htm" title="「10月5日」最高速度21M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月5日」最高速度21M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-v2ray-subscribe.htm" title="「9月7日」最高速度22M/S，2025年SSR/Clash节点/Shadowrocket节点/V2ray每天更新免费节点订阅链接">「9月7日」最高速度22M/S，2025年SSR/Clash节点/Shadowrocket节点/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-free-shadowrocket-node.htm" title="「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接">「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-free-clash-subscribe.htm" title="「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="「10月4日」最高速度22M/S，2025年SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「10月4日」最高速度22M/S，2025年SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="「10月6日」最高速度18M/S，2025年V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「10月6日」最高速度18M/S，2025年V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-13-clash-node-daily-updates.htm" title="「10月13日」最高速度20.3M/S，2025年Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「10月13日」最高速度20.3M/S，2025年Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-shadowrocket-node.htm" title="「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「9月27日」最高速度21.2M/S，2025年Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-clash-windows.htm" title="「9月15日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR每天更新免费节点订阅链接">「9月15日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-clash-node.htm" title="「10月14日」最高速度20.2M/S，2025年Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月14日」最高速度20.2M/S，2025年Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-node-subscribe.htm" title="「10月7日」最高速度20.9M/S，2025年Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接">「10月7日」最高速度20.9M/S，2025年Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-11-clash-node-daily-updates.htm" title="「10月11日」最高速度21.7M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「10月11日」最高速度21.7M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-high-speed-nodes.htm" title="「10月16日」最高速度21.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「10月16日」最高速度21.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-v2ray-ss-ssr.htm" title="「9月19日」最高速度18.6M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接">「9月19日」最高速度18.6M/S，2025年V2ray节点/Shadowrocket节点/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-ssr-subscribe.htm" title="「10月9日」最高速度20.3M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月9日」最高速度20.3M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -206,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
